# lsx86features

./: .gitignore  Cargo.toml  Makefile  README.md  lsx86features.pl
demo-asm/: Makefile  add_arrays_avx2.asm  add_arrays_avx512.asm  add_arrays_sse.asm  main.c
src/: binary.rs  cli.rs  command.rs  lib.rs  main.rs
