[package]
name = "lsx86features"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
# NOTE "color" is a default feature.  Build `clap` without "color".
clap = { version = "4.5.23", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
goblin = "0.9.2"
iced-x86 = "1.21.0"
itertools = "0.13.0"
wildmatch = "2.4.0"
