[package]
name = "lsx86features"
version = "0.1.0"
authors = ["Gábor Nyéki <gn@gabornyeki.com>"]
description = """
lsx86features is a command-line utility for listing the x86 extension sets used by a compiled binary, or by functions inside that binary.
"""
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/gn0/lsx86features"
repository = "https://github.com/gn0/lsx86features"
keywords = ["utility", "tool", "x86"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.94"
# NOTE "color" is a default feature.  Build `clap` without "color".
clap = { version = "4.5.23", default-features = false, features = ["std", "help", "usage", "error-context", "suggestions", "derive"] }
goblin = "0.9.2"
iced-x86 = "1.21.0"
itertools = "0.13.0"
wildmatch = "2.4.0"
